--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,10 +12,10 @@
     font-style: normal;
 }
 
-body.light-bg {
+body {
     background: url(/img/whitepaper-bg.png);
 }
 
 body.dark-bg {
-    background: url(/img/y-so-serious.png);
+    background: url(/img/y-so-serious.png) !important;
 }
